--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: recommendar-api
     env: python
     buildCommand: 'pip install -r requirements.txt'
-    startCommand: 'python api/index.py'
+    startCommand: 'gunicorn api.index:app'
     plan: free
     envVars:
       - key: MONGO_URI
