--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,14 @@ services:
   - type: web
     name: recommendar-api
     env: python
-    buildCommand: 'pip install -r requirements.txt'
-    startCommand: 'gunicorn api.index:app'
     plan: free
+    buildCommand: |
+      pip install -r requirements.txt
+      python train_job/generate_synthetic.py
+      python train_job/train_job.py
+    startCommand: gunicorn "api.index:app" --bind 0.0.0.0:$PORT --workers 2
     envVars:
       - key: MONGO_URI
         sync: false
+      - key: MONGO_DB
+        value: beacon-nest
