--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==3.0.2
-flask-cors==4.0.1
-python-dotenv==1.0.1
-pymongo==4.7.2
-pandas==2.2.2
-scikit-learn==1.4.2
-xgboost==2.0.3
-joblib==1.3.2
-numpy==1.26.4
-gunicorn==21.2.0
+Flask
+flask-cors
+python-dotenv
+pymongo
+pandas
+scikit-learn
+xgboost
+joblib
+numpy
+gunicorn
