--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,20 @@ services:
   - type: web
     name: recommendar-api
     env: python
-    plan: free
-    buildCommand: |
-      pip install -r requirements.txt
-      python train_job/generate_synthetic.py
-      python train_job/train_job.py
-    startCommand: gunicorn "api.index:app" --bind 0.0.0.0:$PORT --workers 2
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn "api.index:app" --bind 0.0.0.0:$PORT
     envVars:
       - key: MONGO_URI
         sync: false
       - key: MONGO_DB
         value: beacon-nest
+      - key: JOBS_COLLECTION
+        value: vacancies
+      - key: CANDS_COLLECTION
+        value: users
+      - key: RETURN_BARE_ARRAY
+        value: 'true'
+      - key: CACHE_JOBS_AT_STARTUP
+        value: 'true'
+      - key: INCLUDE_MATCHED_SKILLS
+        value: 'false'
